--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-footer a {
-
-}
-
 ul {
     list-style-type: none;
 }
@@ -21,6 +17,7 @@ a {
     margin: 0; 
 }
 
+
 a {
     color: #6ab47b;
 }
@@ -28,6 +25,11 @@ a {
 header {
     background-color: #6ab47b;
     border-color: #599a68;
+}
+
+h1 {
+    margin: 15px 0;
+    font-size: 1.75em;
 }
 
 h1, h2 {
@@ -38,6 +40,19 @@ nav {
     background: #599a68;
 }
 
-nav a, nav a:visited {
+nav a, 
+nav a:visited {
     color: #fff;
 }
+
+nav a.selected, 
+nav a:hover {
+    color: #32673f;
+}
+
+body {
+    background: white;
+    color: #999;
+    font-family: 'Open Sans', sans-serif;
+}
+
